# ucl-schedule-adjusted-table-uv

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/_archive/matchday3/html/: buckets_ucl_2025-26.html  index.html
data/_archive/matchday3/raw/: results_ucl_2025-26.csv
data/_archive/matchday3/raw/_cache/: ucl_2024-25_results.html  ucl_2025-26_pots.html
data/_archive/matchday4/html/: buckets_ucl_2025-26.html  projections_ucl_2025-26.html  teamgames_ucl_2025-26.html
data/_archive/matchday4/raw/: pots_ucl_2024-25.csv  results_ucl_2024-25.csv  results_ucl_2025-26.csv
data/_archive/matchday5/raw/: pots_ucl_2025-26.csv
data/html/: baselines_ucl_2024-25.html  index.html  teamgames_ucl_2025-26.html
data/raw/: .~lock.pots_ucl_2024-25.csv#  .~lock.pots_ucl_2025-26.csv#  results_ucl_2025-26.csv
data/raw/_cache/: ucl_2024-25_pots.html  ucl_2025-26_results.html
docs/: index.html  methodology_and_tradeoffs.md
docs/ucl/2025-26/: buckets_ucl_2025-26.html  projections_ucl_2025-26.html  teamgames_ucl_2025-26.html
docs/ucl/archive/2025-26/md3/: baselines_ucl_2024-25.html  projections_ucl_2025-26.html  teamgames_ucl_2024-25.html  teamgames_ucl_2025-26.html
docs/ucl/archive/2025-26/md4/: baselines_ucl_2024-25.html  buckets_ucl_2025-26.html  projections_ucl_2025-26.html  teamgames_ucl_2024-25.html
src/: 01_scrape.py  02_build_helpers.py  03_make_tables.py
